@@ -1,5 +1,14 @@
 2012-02-23  Patrick Gansterer  <paroga@webkit.org>
 
+        [CMake] Add FindDirectX
+        https://bugs.webkit.org/show_bug.cgi?id=79344
+
+        Reviewed by Adam Roben.
+
+        * Source/cmake/FindDirectX.cmake: Added.
+
+2012-02-23  Patrick Gansterer  <paroga@webkit.org>
+
         [CMake] Add FindQuickTimeSDK
         https://bugs.webkit.org/show_bug.cgi?id=79345
 
